# smurff

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst  azure-pipelines.yml  bool.patch  pyproject.toml  setup.py
ci/: Dockerfile  (+5 more)
cpp/Smurff/: CMakeLists.txt  smurff.cpp
cpp/Smurff/cmake/: CMakeLists.txt
cpp/SmurffCpp/: CMakeLists.txt  ConstVMatrixExprIterator.hpp  Model.cpp  Model.h  ResultItem.h  StatusItem.cpp  Types.h  VMatrixExprIterator.hpp  VMatrixIterator.hpp  result.cpp  result.h
cpp/SmurffCpp/Configs/: Config.cpp  Config.h  DataConfig.cpp  DataConfig.h  MatrixConfig.cpp  MatrixConfig.h  NoiseConfig.cpp  NoiseConfig.h  SideInfoConfig.cpp  SideInfoConfig.h  TensorConfig.cpp  TensorConfig.h
cpp/SmurffCpp/DataMatrices/: Data.cpp  Data.h  DataCreator.cpp  DataCreator.h  DataCreatorBase.cpp  DataCreatorBase.h  DenseMatrixData.cpp  DenseMatrixData.h  FullMatrixData.hpp  IDataCreator.h  MatricesData.cpp  MatricesData.h  MatrixData.cpp  MatrixDataFactory.cpp  MatrixDataTempl.hpp  ScarceMatrixData.cpp  ScarceMatrixData.h  SparseMatrixData.cpp  SparseMatrixData.h
cpp/SmurffCpp/DataTensors/: SparseMode.cpp  SparseMode.h  TensorData.cpp  TensorData.h  TensorDataFactory.cpp
cpp/SmurffCpp/IO/: DataWriter.cpp  GenericIO.cpp  GenericIO.h  INIFile.cpp  INIFile.h  MatrixIO.cpp  MatrixIO.h  TensorIO.cpp  TensorIO.h
cpp/SmurffCpp/Noises/: AdaptiveGaussianNoise.cpp  FixedGaussianNoise.cpp  GaussianNoise.cpp  INoiseModel.cpp  INoiseModel.h  NoiseFactory.cpp  NoiseFactory.h  ProbitNoise.cpp  UnusedNoise.cpp
cpp/SmurffCpp/Predict/: PredictSession.cpp  PredictSession.h
cpp/SmurffCpp/Priors/: ILatentPrior.cpp  ILatentPrior.h  IPriorFactory.h  MacauOnePrior.cpp  MacauOnePrior.cpp.orig  MacauOnePrior.h  MacauPrior.cpp  MacauPrior.h  NormalOnePrior.cpp  NormalOnePrior.h  NormalPrior.cpp  NormalPrior.h  PriorFactory.cpp  PriorFactory.h  SpikeAndSlabPrior.cpp  SpikeAndSlabPrior.h
cpp/SmurffCpp/Sessions/: CmdSession.cpp  CmdSession.h  ISession.cpp  ISession.h  PythonSession.cpp  PythonSession.h  Session.cpp  Session.h  SessionFactory.cpp  TrainSession.cpp  TrainSession.h
cpp/SmurffCpp/SideInfo/: DenseSideInfo.cpp  DenseSideInfo.h  ISideInfo.h  SparseSideInfo.cpp  SparseSideInfo.h  linop.cpp  linop.h
cpp/SmurffCpp/Utils/: ConfigFile.h  Distribution.cpp  Distribution.h  Error.h  HDF5.cpp  HDF5.h  HDF5Group.cpp  HDF5Group.h  MatrixUtils.cpp  MatrixUtils.h  OutputFile.cpp  OutputFile.h  PVec.hpp  RootFile.cpp  RootFile.h  SaveState.cpp  SaveState.h  StateFile.cpp  StateFile.h  Step.cpp  Step.h  StepFile.cpp  StepFile.h  StringUtils.cpp  Tensor.cpp  Tensor.h  TensorUtils.cpp  TensorUtils.h  ThreadVector.hpp  counters.cpp  counters.h  gamma_distribution.hpp  omp_util.cpp  omp_util.h
cpp/SmurffCpp/cmake/: CMakeLists.txt
cpp/SmurffMPI/: CMakeLists.txt  MPIMacauPrior.cpp  MPIMacauPrior.h  MPIPriorFactory.cpp  MPIPriorFactory.h  MPISession.cpp  MPISession.h  mpi_smurff.cpp
cpp/SmurffMPI/cmake/: CMakeLists.txt
cpp/Tests/: CMakeLists.txt  Tests.h  TestsDistribution.cpp  TestsInputData.cpp  TestsLinop.cpp  TestsMatrixConfig.cpp  TestsMatrixIO.cpp  TestsMatrixUtils.cpp  TestsMatrixVsTensor.cpp  TestsPVec.cpp  TestsPredict.cpp  TestsRandom.cpp  TestsRandom_ExpectedResults.h  TestsSmurff.cpp  TestsSmurffConfigs.inc  TestsSparseDoubleFeatSideInfo.cpp  TestsSparseSideInfo.cpp  TestsTensor.cpp  TestsTensorConfig.cpp  TestsTensorData.cpp  TestsTensorIO.cpp  TestsViennaCL.cpp  catch.hpp  reformat_tests.pl  tests.cpp
cpp/Tests/cmake/: CMakeLists.txt
cpp/Tests/expected_double/: TestsRandom_ExpectedRandGamma.h  TestsRandom_ExpectedRandNormal.h  TestsSmurff_ExpectedResults.h
cpp/Tests/expected_double_boost107/: TestsRandom_ExpectedRandGamma.h  TestsRandom_ExpectedRandNormal.h  TestsSmurff_ExpectedResults.h
cpp/Tests/expected_double_results/: TestsSmurff_ExpectedResults.h
cpp/Tests/expected_float/: TestsSmurff_ExpectedResults.h
cpp/Tests/expected_float_boost105/: TestsSmurff_ExpectedResults.h
cpp/Tests/expected_float_boost107/: TestsRandom_ExpectedRandGamma.h  TestsRandom_ExpectedRandNormal.h  TestsSmurff_ExpectedResults.h
cpp/Tests/expected_float_results/: TestsSmurff_1018.h  TestsSmurff_1075.h  TestsSmurff_1135.h  TestsSmurff_1193.h  TestsSmurff_1250.h  TestsSmurff_1305.h  TestsSmurff_1466.h  TestsSmurff_1518.h  TestsSmurff_1572.h  TestsSmurff_1626.h  TestsSmurff_1683.h  TestsSmurff_1738.h  TestsSmurff_1792.h  TestsSmurff_1844.h  TestsSmurff_1898.h  TestsSmurff_1950.h  TestsSmurff_2004.h  TestsSmurff_2056.h  TestsSmurff_2110.h  TestsSmurff_2164.h  TestsSmurff_2222.h  TestsSmurff_359.h  TestsSmurff_411.h  TestsSmurff_467.h  TestsSmurff_523.h  TestsSmurff_577.h  TestsSmurff_629.h  TestsSmurff_685.h  TestsSmurff_741.h  TestsSmurff_795.h  TestsSmurff_847.h  TestsSmurff_903.h  TestsSmurff_959.h
cpp/Tests/expected_results/: TestsSmurff_1193.h  TestsSmurff_1250.h  TestsSmurff_1305.h  TestsSmurff_1572.h  TestsSmurff_1626.h  TestsSmurff_1738.h  TestsSmurff_1792.h  TestsSmurff_1950.h  TestsSmurff_2110.h  TestsSmurff_2222.h  TestsSmurff_359.h  TestsSmurff_467.h  TestsSmurff_741.h  TestsSmurff_903.h  TestsSmurff_959.h
cpp/Utils/: CMakeLists.txt  Error.h  SparseTensor.cpp  SparseTensor.h  StringUtils.cpp  StringUtils.h  Tensor.cpp  Tensor.h  ThreadVector.hpp  TruncNorm.cpp  counters.cpp  counters.h  linop.h  omp_util.cpp
cpp/Utils/cmake/: CMakeLists.txt
python/smurff/: CMakeLists.txt  setup-pybind11.py  setup.py  setup.py.in
python/smurff/include/: Config.pxd  ISession.pxd  MatrixConfig.pxd  OutputFile.pxd  ResultItem.pxd  RootFile.pxd  SideInfoConfig.pxd  StatusItem.pxd  Step.pxd  StepFile.pxd  TensorConfig.pxd
python/smurff/smurff/: CMakeLists.txt  __init__.py  helper.py  predict.py  smurff.py  trainsession.py  wrapper.cpp  wrapper.pyx
python/smurff/src/: py_smurff
python/smurff/src/smurff/: __init__.py  helper.py  predict.py  prepare.py  smurff.py  trainsession.py  wrapper.cpp  wrapper.pyx
python/smurff/test/: test_bpmf.py  test_noisemodels.py  test_pp.py  test_predict.py  test_predict_sideinfo.py  test_predict_simple.py  test_pybind.py  test_smurff.py  train_output.h5
(+172 files in other folders)
